--- a/app/src/main/res/layout/fragment_equation.xml
+++ b/app/src/main/res/layout/fragment_equation.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/frameLayout"
     android:layout_width="115dp"
-    android:layout_height="135dp"
+    android:layout_height="wrap_content"
     tools:context=".EquationFragment">
 
     <TextView
@@ -42,5 +42,24 @@
         android:textSize="40sp"
         app:layout_constraintBottom_toBottomOf="@+id/numberB"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <EditText
+        android:id="@+id/editText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@null"
+        android:ems="10"
+        android:focusable="true"
+        android:gravity="center|top"
+        android:includeFontPadding="false"
+        android:inputType="number"
+        android:singleLine="true"
+        android:textAlignment="gravity"
+        android:textAllCaps="false"
+        android:textSize="40sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/view2" />
 
 </android.support.constraint.ConstraintLayout>
