--- a/app/src/main/res/layout/fragment_equation.xml
+++ b/app/src/main/res/layout/fragment_equation.xml
@@ -43,16 +43,14 @@
         app:layout_constraintBottom_toBottomOf="@+id/numberB"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <EditText
-        android:id="@+id/editText"
+    <TextView
+        android:id="@+id/numInput"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@null"
         android:ems="10"
-        android:focusable="true"
         android:gravity="center|top"
         android:includeFontPadding="false"
-        android:inputType="number"
         android:singleLine="true"
         android:textAlignment="gravity"
         android:textAllCaps="false"
@@ -60,6 +58,6 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view2" />
+        app:layout_constraintTop_toBottomOf="@+id/view2"/>
 
 </android.support.constraint.ConstraintLayout>
