--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -94,7 +94,28 @@
         android:onClick="erase"
         app:layout_constraintStart_toEndOf="@+id/fragment_main"
         app:layout_constraintTop_toTopOf="@+id/fragment_main"
-        app:srcCompat="@drawable/arrow24" />
+        app:srcCompat="@drawable/baseline_backspace_black_36" />
+
+    <TextView
+        android:id="@+id/ScoreView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:text="Score"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ScoreWordView" />
+
+    <TextView
+        android:id="@+id/ScoreWordView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:text="Score"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </android.support.constraint.ConstraintLayout>
