--- a/app/src/main/res/layout/fragment_equation.xml
+++ b/app/src/main/res/layout/fragment_equation.xml
@@ -51,6 +51,7 @@
         android:ems="10"
         android:gravity="center|top"
         android:includeFontPadding="false"
+        android:inputType="number"
         android:singleLine="true"
         android:textAlignment="gravity"
         android:textAllCaps="false"
@@ -58,6 +59,6 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view2"/>
+        app:layout_constraintTop_toBottomOf="@+id/view2" />
 
 </android.support.constraint.ConstraintLayout>
