--- a/app/src/main/res/layout/fragment_inputbuttons.xml
+++ b/app/src/main/res/layout/fragment_inputbuttons.xml
@@ -8,106 +8,143 @@
     tools:context=".InputButtons">
 
 
-    <Button
+    <ImageButton
         android:id="@+id/btn1"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:background="@null"
+        android:contentDescription="1"
         android:onClick="IBaddNum"
-        android:text="1"
+        android:scaleType="centerCrop"
+        android:src="@drawable/box1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
+    <ImageButton
         android:id="@+id/btn2"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="20dp"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="24dp"
+        android:background="@null"
+        android:contentDescription="2"
         android:onClick="IBaddNum"
-        android:text="2"
+        android:scaleType="centerCrop"
+        android:src="@drawable/box2"
         app:layout_constraintStart_toEndOf="@+id/btn1"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
+    <ImageButton
         android:id="@+id/btn3"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="20dp"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="24dp"
+        android:background="@null"
+        android:contentDescription="3"
         android:onClick="IBaddNum"
-        android:text="3"
+        android:scaleType="centerCrop"
+        android:src="@drawable/box3"
         app:layout_constraintStart_toEndOf="@+id/btn2"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
+    <ImageButton
         android:id="@+id/btn4"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="20dp"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="24dp"
+        android:background="@null"
+        android:contentDescription="4"
         android:onClick="IBaddNum"
-        android:text="4"
+        android:scaleType="centerCrop"
+        android:src="@drawable/box4"
         app:layout_constraintStart_toEndOf="@+id/btn3"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
+    <ImageButton
         android:id="@+id/btn5"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="20dp"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="24dp"
+        android:background="@null"
+        android:contentDescription="5"
         android:onClick="IBaddNum"
+        android:scaleType="centerCrop"
+        android:src="@drawable/box5"
         android:text="5"
         app:layout_constraintStart_toEndOf="@+id/btn4"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
+    <ImageButton
         android:id="@+id/btn6"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="50dp"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:layout_marginTop="56dp"
+        android:background="@null"
+        android:contentDescription="6"
         android:onClick="IBaddNum"
+        android:scaleType="centerCrop"
+        android:src="@drawable/box6"
         android:text="6"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
+    <ImageButton
         android:id="@+id/btn7"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="50dp"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="56dp"
+        android:background="@null"
+        android:contentDescription="7"
         android:onClick="IBaddNum"
+        android:scaleType="centerCrop"
+        android:src="@drawable/box7"
         android:text="7"
         app:layout_constraintStart_toEndOf="@+id/btn6"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
+    <ImageButton
         android:id="@+id/btn8"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="50dp"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="56dp"
+        android:background="@null"
+        android:contentDescription="8"
         android:onClick="IBaddNum"
+        android:scaleType="centerCrop"
+        android:src="@drawable/box8"
         android:text="8"
         app:layout_constraintStart_toEndOf="@+id/btn7"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
+    <ImageButton
         android:id="@+id/btn9"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="50dp"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="56dp"
+        android:background="@null"
+        android:contentDescription="9"
         android:onClick="IBaddNum"
+        android:scaleType="centerCrop"
+        android:src="@drawable/box9"
         android:text="9"
         app:layout_constraintStart_toEndOf="@+id/btn8"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
+    <ImageButton
         android:id="@+id/btn0"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="50dp"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="56dp"
+        android:background="@null"
+        android:contentDescription="0"
         android:onClick="IBaddNum"
+        android:scaleType="centerCrop"
+        android:src="@drawable/box0"
         android:text="0"
         app:layout_constraintStart_toEndOf="@+id/btn9"
         app:layout_constraintTop_toTopOf="parent" />
+
 </android.support.constraint.ConstraintLayout>
