--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -8,11 +8,13 @@
 
     <Button
         android:id="@+id/gameStartBtn"
-        android:layout_width="wrap_content"
+        style="@android:style/Widget.Material.Button.Colored"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="64dp"
         android:layout_marginTop="256dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="64dp"
+        android:background="@drawable/rounded_button"
         android:text="Start Game"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
