--- a/app/src/main/res/layout/fragment_inputbuttons.xml
+++ b/app/src/main/res/layout/fragment_inputbuttons.xml
@@ -10,8 +10,8 @@
 
     <ImageButton
         android:id="@+id/btn1"
-        android:layout_width="45dp"
-        android:layout_height="45dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:background="@null"
         android:contentDescription="1"
         android:onClick="IBaddNum"
@@ -22,8 +22,8 @@
 
     <ImageButton
         android:id="@+id/btn2"
-        android:layout_width="45dp"
-        android:layout_height="45dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_marginStart="24dp"
         android:background="@null"
         android:contentDescription="2"
@@ -35,35 +35,37 @@
 
     <ImageButton
         android:id="@+id/btn3"
-        android:layout_width="45dp"
-        android:layout_height="45dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_marginStart="24dp"
         android:background="@null"
         android:contentDescription="3"
         android:onClick="IBaddNum"
         android:scaleType="centerCrop"
         android:src="@drawable/box3"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/btn2"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
         android:id="@+id/btn4"
-        android:layout_width="45dp"
-        android:layout_height="45dp"
-        android:layout_marginStart="24dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="8dp"
         android:background="@null"
         android:contentDescription="4"
         android:onClick="IBaddNum"
         android:scaleType="centerCrop"
         android:src="@drawable/box4"
-        app:layout_constraintStart_toEndOf="@+id/btn3"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn1" />
 
     <ImageButton
         android:id="@+id/btn5"
-        android:layout_width="45dp"
-        android:layout_height="45dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_marginStart="24dp"
+        android:layout_marginTop="8dp"
         android:background="@null"
         android:contentDescription="5"
         android:onClick="IBaddNum"
@@ -71,43 +73,44 @@
         android:src="@drawable/box5"
         android:text="5"
         app:layout_constraintStart_toEndOf="@+id/btn4"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/btn2" />
 
     <ImageButton
         android:id="@+id/btn6"
-        android:layout_width="45dp"
-        android:layout_height="45dp"
-        android:layout_marginTop="56dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="8dp"
         android:background="@null"
         android:contentDescription="6"
         android:onClick="IBaddNum"
         android:scaleType="centerCrop"
         android:src="@drawable/box6"
         android:text="6"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/btn5"
+        app:layout_constraintTop_toBottomOf="@+id/btn3" />
 
     <ImageButton
         android:id="@+id/btn7"
-        android:layout_width="45dp"
-        android:layout_height="45dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="56dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="8dp"
         android:background="@null"
         android:contentDescription="7"
         android:onClick="IBaddNum"
         android:scaleType="centerCrop"
         android:src="@drawable/box7"
         android:text="7"
-        app:layout_constraintStart_toEndOf="@+id/btn6"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn4" />
 
     <ImageButton
         android:id="@+id/btn8"
-        android:layout_width="45dp"
-        android:layout_height="45dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="56dp"
+        android:layout_marginTop="8dp"
         android:background="@null"
         android:contentDescription="8"
         android:onClick="IBaddNum"
@@ -115,36 +118,39 @@
         android:src="@drawable/box8"
         android:text="8"
         app:layout_constraintStart_toEndOf="@+id/btn7"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/btn5" />
 
     <ImageButton
         android:id="@+id/btn9"
-        android:layout_width="45dp"
-        android:layout_height="45dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="56dp"
+        android:layout_marginTop="8dp"
         android:background="@null"
         android:contentDescription="9"
         android:onClick="IBaddNum"
         android:scaleType="centerCrop"
         android:src="@drawable/box9"
         android:text="9"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/btn8"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/btn6" />
 
     <ImageButton
         android:id="@+id/btn0"
-        android:layout_width="45dp"
-        android:layout_height="45dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="56dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         android:background="@null"
         android:contentDescription="0"
         android:onClick="IBaddNum"
         android:scaleType="centerCrop"
         android:src="@drawable/box0"
         android:text="0"
-        app:layout_constraintStart_toEndOf="@+id/btn9"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toStartOf="@+id/btn9"
+        app:layout_constraintStart_toEndOf="@+id/btn7"
+        app:layout_constraintTop_toBottomOf="@+id/btn8" />
 
 </android.support.constraint.ConstraintLayout>
