--- a/app/src/main/res/layout/fragment_inputbuttons.xml
+++ b/app/src/main/res/layout/fragment_inputbuttons.xml
@@ -14,7 +14,6 @@
         android:layout_height="60dp"
         android:background="@null"
         android:contentDescription="1"
-        android:onClick="IBaddNum"
         android:scaleType="centerCrop"
         android:src="@drawable/box1"
         app:layout_constraintStart_toStartOf="parent"
@@ -27,7 +26,6 @@
         android:layout_marginStart="24dp"
         android:background="@null"
         android:contentDescription="2"
-        android:onClick="IBaddNum"
         android:scaleType="centerCrop"
         android:src="@drawable/box2"
         app:layout_constraintStart_toEndOf="@+id/btn1"
@@ -40,7 +38,6 @@
         android:layout_marginStart="24dp"
         android:background="@null"
         android:contentDescription="3"
-        android:onClick="IBaddNum"
         android:scaleType="centerCrop"
         android:src="@drawable/box3"
         app:layout_constraintEnd_toEndOf="parent"
@@ -54,7 +51,6 @@
         android:layout_marginTop="8dp"
         android:background="@null"
         android:contentDescription="4"
-        android:onClick="IBaddNum"
         android:scaleType="centerCrop"
         android:src="@drawable/box4"
         app:layout_constraintStart_toStartOf="parent"
@@ -68,7 +64,6 @@
         android:layout_marginTop="8dp"
         android:background="@null"
         android:contentDescription="5"
-        android:onClick="IBaddNum"
         android:scaleType="centerCrop"
         android:src="@drawable/box5"
         android:text="5"
@@ -83,7 +78,6 @@
         android:layout_marginTop="8dp"
         android:background="@null"
         android:contentDescription="6"
-        android:onClick="IBaddNum"
         android:scaleType="centerCrop"
         android:src="@drawable/box6"
         android:text="6"
@@ -98,7 +92,6 @@
         android:layout_marginTop="8dp"
         android:background="@null"
         android:contentDescription="7"
-        android:onClick="IBaddNum"
         android:scaleType="centerCrop"
         android:src="@drawable/box7"
         android:text="7"
@@ -113,7 +106,6 @@
         android:layout_marginTop="8dp"
         android:background="@null"
         android:contentDescription="8"
-        android:onClick="IBaddNum"
         android:scaleType="centerCrop"
         android:src="@drawable/box8"
         android:text="8"
@@ -128,7 +120,6 @@
         android:layout_marginTop="8dp"
         android:background="@null"
         android:contentDescription="9"
-        android:onClick="IBaddNum"
         android:scaleType="centerCrop"
         android:src="@drawable/box9"
         android:text="9"
@@ -144,15 +135,14 @@
         android:layout_marginTop="8dp"
         android:background="@null"
         android:contentDescription="0"
-        android:onClick="IBaddNum"
         android:scaleType="centerCrop"
         android:src="@drawable/box0"
         android:text="0"
-        app:layout_constraintStart_toEndOf="@+id/button2"
+        app:layout_constraintStart_toEndOf="@+id/btnClear"
         app:layout_constraintTop_toBottomOf="@+id/btn8" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/btnClear"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_marginTop="8dp"
@@ -162,7 +152,7 @@
         app:layout_constraintTop_toBottomOf="@+id/btn7" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/btnEnter"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_marginStart="24dp"
