Updated Profile Page
- Edit Button

+ Currency Icon Changed
+ Default Profile Picture Changed

--- a/app/src/main/res/layout/activity_user__profile.xml
+++ b/app/src/main/res/layout/activity_user__profile.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#444261"
+    android:background="@drawable/background_profile"
     tools:context=".User_Profile">
 
     <TextView
@@ -13,6 +13,9 @@
         android:layout_height="24dp"
         android:text="25"
         android:textAlignment="center"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/txtGamesWon"
         app:layout_constraintStart_toStartOf="@+id/txtGamesWon"
         app:layout_constraintTop_toBottomOf="@+id/txtGamesWon" />
@@ -21,8 +24,11 @@
         android:id="@+id/txtTime"
         android:layout_width="112dp"
         android:layout_height="22dp"
-        android:text="32"
+        android:text="32s"
         android:textAlignment="center"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/txtBestTime"
         app:layout_constraintStart_toStartOf="@+id/txtBestTime"
         app:layout_constraintTop_toBottomOf="@+id/txtBestTime" />
@@ -33,6 +39,9 @@
         android:layout_height="22dp"
         android:text="720"
         android:textAlignment="center"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/txtBestScore"
         app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="@+id/txtBestScore"
@@ -40,13 +49,15 @@
 
     <TextView
         android:id="@+id/txtBestScore"
-        android:layout_width="121dp"
-        android:layout_height="24dp"
+        android:layout_width="140dp"
+        android:layout_height="35dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="70dp"
         android:text="Best Score: "
         android:textAlignment="center"
-        android:textSize="18sp"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="24sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/txtBestTime"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -54,14 +65,16 @@
 
     <TextView
         android:id="@+id/txtGamesWon"
-        android:layout_width="121dp"
-        android:layout_height="24dp"
+        android:layout_width="140dp"
+        android:layout_height="35dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="80dp"
         android:layout_marginEnd="8dp"
         android:text="Games Won: "
         android:textAlignment="center"
-        android:textSize="18sp"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="24sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtTitle" />
@@ -74,11 +87,10 @@
         android:layout_marginBottom="70dp"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/imgBadge4"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imgBadge2"
         app:srcCompat="@android:drawable/btn_star_big_on"
-        tools:srcCompat="@tools:sample/avatars[11]"
+        tools:srcCompat="@android:drawable/btn_star_big_on"
         tools:visibility="visible" />
 
     <ImageView
@@ -93,7 +105,7 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@android:drawable/btn_star_big_on"
-        tools:srcCompat="@tools:sample/avatars[11]"
+        tools:srcCompat="@android:drawable/btn_star_big_on"
         tools:visibility="visible" />
 
     <ImageView
@@ -109,22 +121,7 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/imgBadge1"
         app:srcCompat="@android:drawable/btn_star_big_on"
-        tools:srcCompat="@tools:sample/avatars[11]"
-        tools:visibility="visible" />
-
-    <ImageView
-        android:id="@+id/imgBadge4"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="70dp"
-        android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/imgBadge3"
-        app:srcCompat="@android:drawable/btn_star_big_on"
-        tools:srcCompat="@tools:sample/avatars[11]"
+        tools:srcCompat="@android:drawable/btn_star_big_on"
         tools:visibility="visible" />
 
     <ImageView
@@ -140,8 +137,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/baseline_account_circle_white_48"
-        tools:srcCompat="@drawable/baseline_account_circle_white_48"
+        app:srcCompat="@drawable/baseline_account_circle_black_48"
+        tools:srcCompat="@drawable/baseline_account_circle_black_48"
         tools:visibility="visible" />
 
     <TextView
@@ -149,10 +146,12 @@
         android:layout_width="206dp"
         android:layout_height="41dp"
         android:layout_marginTop="4dp"
-        android:text="username"
+        android:text="haydenberryc"
         android:textAlignment="center"
-        android:textAllCaps="true"
+        android:textAllCaps="false"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="24sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/imageView2"
         app:layout_constraintStart_toStartOf="@+id/imageView2"
         app:layout_constraintTop_toBottomOf="@+id/imageView2"
@@ -162,27 +161,32 @@
         android:id="@+id/txtTitle"
         android:layout_width="206dp"
         android:layout_height="20dp"
+        android:layout_marginTop="30dp"
         android:autoText="true"
         android:cursorVisible="true"
-        android:text="Title"
+        android:text="Mathlete"
         android:textAlignment="center"
-        android:textAllCaps="true"
+        android:textAllCaps="false"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="18sp"
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="@+id/imageView2"
         app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="@+id/imageView2"
-        app:layout_constraintTop_toBottomOf="@+id/txtUsername"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2"
         tools:visibility="visible" />
 
     <TextView
         android:id="@+id/txtBestTime"
-        android:layout_width="121dp"
-        android:layout_height="24dp"
+        android:layout_width="140dp"
+        android:layout_height="35dp"
         android:layout_marginTop="70dp"
         android:layout_marginEnd="8dp"
         android:text="Best Time: "
         android:textAlignment="center"
-        android:textSize="18sp"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="24sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/txtBestScore"
@@ -196,16 +200,20 @@
         android:layout_marginTop="16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/baseline_polymer_white_24"
-        tools:srcCompat="@drawable/baseline_polymer_white_24" />
+        app:srcCompat="@drawable/baseline_polymer_black_48"
+        tools:srcCompat="@drawable/baseline_polymer_black_48" />
 
     <TextView
         android:id="@+id/txtTokens"
         android:layout_width="43dp"
-        android:layout_height="19dp"
+        android:layout_height="24dp"
         android:layout_marginStart="2dp"
         android:text="1337"
         android:textAlignment="center"
+        android:textColor="@color/colorPrimaryDark"
+        android:textColorHighlight="@color/colorPrimaryDark"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/imgToken"
         app:layout_constraintStart_toEndOf="@+id/imgToken"
         app:layout_constraintTop_toTopOf="@+id/imgToken" />
