Changed design of UI

--- a/app/src/main/res/layout/fragment_equation.xml
+++ b/app/src/main/res/layout/fragment_equation.xml
@@ -12,6 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="12"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="50sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -21,6 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="93"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="50sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/numberA" />
@@ -39,6 +41,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginBottom="8dp"
         android:text="x"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="40sp"
         app:layout_constraintBottom_toBottomOf="@+id/numberB"
         app:layout_constraintStart_toStartOf="parent" />
@@ -55,6 +58,7 @@
         android:singleLine="true"
         android:textAlignment="gravity"
         android:textAllCaps="false"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="40sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
