--- a/app/src/main/res/layout/fragment_equation.xml
+++ b/app/src/main/res/layout/fragment_equation.xml
@@ -29,16 +29,18 @@
 
     <View
         android:id="@+id/view2"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="1dp"
         android:background="@android:color/darker_gray"
+        app:layout_constraintEnd_toEndOf="@+id/numberB"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/textView3"
         app:layout_constraintTop_toBottomOf="@+id/numberB" />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
         android:layout_marginBottom="8dp"
         android:text="x"
         android:textColor="@color/colorPrimaryDark"
