--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -1,4 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+Google Play game services IDs.
+Save this file as res/values/games-ids.xml in your project.
+-->
 <resources>
-    <string name="app_id">279844606214</string>
+    <!-- app_id -->
+    <string name="app_id" translatable="false">279844606214</string>
+    <!-- package_name -->
+    <string name="package_name" translatable="false">efx.com.multio</string>
+    <!-- event Test Event -->
+    <string name="event_test_event" translatable="false">CgkIhqKnwJIIEAIQAQ</string>
 </resources>
