Updated InputButtons Graphics
Changed font on buttons to use Roboto [Bold]

--- a/app/src/main/res/layout/fragment_inputbuttons.xml
+++ b/app/src/main/res/layout/fragment_inputbuttons.xml
@@ -145,7 +145,7 @@
         android:layout_marginTop="8dp"
         android:background="@null"
         android:scaleType="centerCrop"
-        android:src="@drawable/box_enter2"
+        android:src="@drawable/box_enter"
         android:text="Enter"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/btn0"
